--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 
 	<script defer src='/build/bundle.js'></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"></script>
 </head>
 
 <style>
